Validation of group device linking and delinking.
